--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -10,4 +10,4 @@ nav.navbar.navbar-fixed-top
         ul.dropdown-menu
           -for(var i = 0; i < movies.length; i++)
             li
-              a.episode_link(href="#")= movies[i].title
+              a.episode_link(href="/movie-episode/" + movies[i].episode_number)= movies[i].title
